--- a/main/tools/blueprints/page/templates/index.html
+++ b/main/tools/blueprints/page/templates/index.html
@@ -2,11 +2,16 @@
 {% block title %} Easy Manager - Home {% endblock %}
 
 {% block body %}
-    <div class="container-logo">
-        <div class="logo">Easy Admin</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4"><h2>Easy Management</h2></div>
+            <div class="col-sm-4"></div>
+        </div>
     </div>
-    <form class="form" action="/">
-        <button class="lead-btn" type="submit">Users</button>
-        <div class="main"> hi </div>
-    </form>
+    <div class="container">
+        <ul class="nav nav-tabs" role="tablist">
+            <li><a href="#">Users</a></li>
+        </ul>
+    </div>
 {% endblock %}
