--- a/main/tools/blueprints/page/templates/index.html
+++ b/main/tools/blueprints/page/templates/index.html
@@ -2,16 +2,5 @@
 {% block title %} Easy Manager - Home {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4"><h2>Easy Management</h2></div>
-            <div class="col-sm-4"></div>
-        </div>
-    </div>
-    <div class="container">
-        <ul class="nav nav-tabs" role="tablist">
-            <li><a href="#">Users</a></li>
-        </ul>
-    </div>
+home
 {% endblock %}
