--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -6,3 +6,19 @@
     padding-top: 10px;
     border-top: 1px solid #e9e9e9;
 }
+
+.sheets-footer {
+    position: relative;
+    bottom: 0;
+    color: #e9e9e9
+    width: 100%;
+    height 30px;
+}
+
+.nav-bigger {
+    font-size: 18px;
+}
+
+.container-main {
+    min-height 80%
+}
