--- a/main/templates/layouts/base.html
+++ b/main/templates/layouts/base.html
@@ -8,7 +8,7 @@
         <title> {% block title %} {% endblock %} </title>
     </head>
     <body>
-        <div class="container">
+        <div class="container main-header">
             <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4"><h2><a href="/">Easy Management</a></h2></div>
@@ -16,20 +16,27 @@
             </div>
         </div>
         <div class="container">
-            <ul class="navbar navbar-default nav-bigger">
+            <ul class="navbar navbar-default list-inline">
                 <li><a href="/">Home</a></li>
                 <li><a href="/users">Users</a></li>
             </ul>
         </div>
+
         {% block body %}{% endblock %}
 
-        <footer class="footer">
-            <div class="container">
-                <ul class="list-inline">
-                    <li class="text-muted">Easy Management &copy; 2017</li>
-                    <li><a href="">FAQ</a></li>
-                </ul>
-            </div>
-        </footer>
-  </body>
+        <div class="container">
+            <nav class="navbar navbar-fixed-bottom main-footer">
+                <div class="container-fluid">
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-4">
+                        <ul class="list-inline">
+                            <li class="text-muted">Easy Management &copy; 2017</li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4"></div>
+                </div>
+            </nav>
+        </div>
+    </body>
 </html>
