--- a/main/tools/blueprints/page/templates/users.html
+++ b/main/tools/blueprints/page/templates/users.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/base.html' %}
-{% block title %} Easy Manager - Users {% endblock %}
+{% block title %} Easy Manager - Users{% endblock %}
 <br>
 {% block body %}
 <div class="container">
     <ul class="nav nav-tabs" role="tablist">
         <li><a class="active" data-toggle="pill" href="#report">Report</a></li>
         <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" id="babaca" href="#">Users <b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Users <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <input class="form-control" id="userFilter" type="text" placeholder="Filter...">
                 <li><a data-toggle="pill" href="#root">root</a></li>
@@ -2995,303 +2995,17 @@
                 </tbody>
             </table>
         </div>
-        <div id="report" class="tab-pane active">
-            <br>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-6 alert-warning text-left"><h4>   Number of Inconsistences Found: 37</h4></div>
-            </div>
-            <br>
-            <br>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>daemon</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#daemon">Potential conflict spotted: groups</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>uucp</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#uucp">Potential conflict spotted: groups</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>lp</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#lp">Potential conflict spotted: pgrp</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#lp">Potential conflict spotted: groups</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>invscout</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#invscout">Potential conflict spotted: id</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#invscout">Potential conflict spotted: pgrp</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#invscout">Potential conflict spotted: groups</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>snapp</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#snapp">Potential conflict spotted: id</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#snapp">Potential conflict spotted: shell</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>ipsec</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ipsec">Potential conflict spotted: id</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>srvproxy</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#srvproxy">Potential conflict spotted: id</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>sshd</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#sshd">Potential conflict spotted: id</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>nagios</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#nagios">Potential conflict spotted: id</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#nagios">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#nagios">Potential conflict spotted: gecos</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>critter</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#critter">Potential conflict spotted: id</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#critter">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#critter">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>ujanssen</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ujanssen">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ujanssen">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>nketelse</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#nketelse">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#nketelse">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>ohannula</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ohannula">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ohannula">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>rwolter</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#rwolter">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#rwolter">Potential conflict spotted: home</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#rwolter">Potential conflict spotted: gecos</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>kharrak</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#kharrak">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#kharrak">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>hholst</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#hholst">Potential conflict spotted: id</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#hholst">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#hholst">Potential conflict spotted: home</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>edi</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#edi">Potential conflict spotted: groups</a></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#edi">Potential conflict spotted: shell</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>ansiblec</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#ansiblec">Potential conflict spotted: gecos</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>hkentgen</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#hkentgen">Potential conflict spotted: id</a></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-1 alert-info text-right">
-                        <strong>emrichp</strong>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-3 alert-danger text-left"><a data-toggle="pill" href="#emrichp">Potential conflict spotted: groups</a></div>
-                </div>
-                <br>
-            </div>
-        </div>
     </div>
 </div>
 <script>
     $(document).ready(function(){
-        $("#userFilter").on("keyup", function() {
-            var value = $(this).val().toLowerCase();
-            $(".dropdown-menu li").filter(function() {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-        });
+    $("#rwolter").toggle()
+    $("#userFilter").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $(".dropdown-menu li").filter(function() {
+    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
     });
-
-    $(document).ready(function(){
-        activaTab('aaa');
     });
-
-    function activaTab(tab){
-        $('.nav-tabs a[href="#' + tab + '"]').tab('show');
-    };
+    });
 </script>
 {% endblock %}
