--- a/main/templates/layouts/base.html
+++ b/main/templates/layouts/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
         <title> {% block title %} {% endblock %} </title>
     </head>
     <body>
@@ -22,7 +23,9 @@
             </ul>
         </div>
 
+        <div class="container">
         {% block body %}{% endblock %}
+        </div>
 
         <div class="container">
             <nav class="navbar navbar-fixed-bottom main-footer">
