--- a/main/tools/blueprints/page/templates/index.html
+++ b/main/tools/blueprints/page/templates/index.html
@@ -2,25 +2,36 @@
 {% block title %} Easy	Manager - Home	{% endblock %}
 
 {% block body %}
-            <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-            <div class="well">
-                <ul class="nav nav-list">
-                    <li><label class="tree-toggler nav-header">+ Menu</label>
-                        <ul class="nav nav-list tree">
-                            <li><label class="tree-toggler nav-header">+ Users</label>
-                                <ul class="nav nav-list tree">
-                                    <li><label class="tree-toggler nav-header">+ Report</label>
-                                        <ul class="nav nav-list tree">
-                                            <li><a href="/users">Alfredo</a></li>
-                                            <li><a href="#">Geremias</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="divider"></li>
-                </ul>
-            </div>
-            <script src="/static/js/index.js"></script>
+                <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
+                <h1>Some text to enable scrolling</h1>
 {% endblock %}
