--- a/main/templates/layouts/base-test.html
+++ b/main/templates/layouts/base-test.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <div class="main-header text-center">
-            <h2><a href="/">Easy Management <b class="small"><b class="small"><b class="small">(v. -0.0.0.01 alpha)</b></b></b></a></h2>
+            <h2><a href="/">Easy Management</a></h2>
         </div>
         <div class="panel-base">
             <div class="col-lg-2 panel-tree">
                 <h4> Browser<button class="btn btn-link btn-sm" id="tree-toggler"><b>(+)</b></button></h4>
                 <ul class="nav nav-list">
-                    <li><label class="tree-toggler">+ Users </label> <span class="small"><a href="/users">(See All)</a></span>
+                    <li><label class="tree-toggler">+ Users </label> <a class="small" href="/users">(See All)</a>
                         <ul class="nav nav-list tree">
                             <li><label class="tree-toggler nav-header">+ Report </label><b class="text-large"><span class="label label-warning">37</span></b>
                                 <ul class="nav nav-list tree">
